Refactor and enhance functionality across various components
- Suppressed PMD warning for unused private method in ProgressPanelController.
- Streamlined file path conversion in MainViewModel using modern Java features.
- Added unit tests for output path resolution in CleaningEngineTest to handle filename collisions and custom folder scenarios.
- Improved GIF handling tests in GifHandlerTest to ensure proper metadata removal.
- Expanded HEIC handling tests in HeicHandlerTest to cover unsupported brands and metadata summary retrieval.
- Enhanced JPEG handling tests in JpegHandlerTest to validate behavior with invalid files.
- Updated WebP handling tests in WebpHandlerTest to ensure correct chunk removal and exception handling.
- Refactored image creation methods in BatchScannerServiceTest for better code reuse.
- Improved error handling in CleaningServiceTest for JavaFX toolkit initialization.
- Added parameterized tests in FileValidatorParameterizedTest to cover various image signature variants and unsupported HEIC brands.